# pdfstract

./: .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  build_and_upload.sh  cli.py  docker-compose.yml  env.example  main.py  nginx.conf  pyproject.toml  run.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChunkResults.jsx  ChunkerSelect.jsx
frontend/src/components/ui/: alert.jsx  badge.jsx  button.jsx  select.jsx  tabs.jsx
scripts/: setup-mineru.sh
services/: base.py  chunker_factory.py  ocrfactory.py
services/chunkers/: __init__.py  base.py  code_chunker.py  fast_chunker.py  late_chunker.py  neural_chunker.py  recursive_chunker.py  semantic_chunker.py  sentence_chunker.py  slumber_chunker.py  table_chunker.py  token_chunker.py
services/converters/: __init__.py  deepseekocr_transformers_converter.py  docling_converter.py  marker_converter.py  markitdown_converter.py  mineru_converter.py  paddleocr_converter.py  pymupdf4llm_converter.py  pytesseract_converter.py
